Fix search size on smaller tablet size

--- a/client/app/assets/less/redash/redash-newstyle.less
+++ b/client/app/assets/less/redash/redash-newstyle.less
@@ -860,6 +860,12 @@ text.slicetext {
   }
 }
 
+@media (min-width: 768px) and (max-width: 850px) {
+  .menu-search {
+    width: 175px;
+  }
+}
+
 @media (max-width: 1084px) {
   .dropdown--profile__username {
     display: none;
